solve z-index problem

--- a/week6/scss/_banner.scss
+++ b/week6/scss/_banner.scss
@@ -6,7 +6,7 @@
         position: absolute;
         top: 0;
         bottom: 0;
-        z-index: -10000;
+         z-index: -10;
         background-image: url(../img/tom-crew-5HRCkrSs9Dk-unsplash.jpg);
         // height: 500px;
         background-position: center center;
